--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -4,13 +4,16 @@ on:
   push:
     branches:
       - main
-  pull_request_review:
+  pull_request:
     types:
-      - submitted
+      - opened
+      - synchronize
+      - reopened
+      - ready_for_review
 
 jobs:
   lint:
-    if: github.event.review.state == 'APPROVED'
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
