fix job step order

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -17,12 +17,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Enable corepack
+        run: corepack enable
       - uses: actions/setup-node@v4.0.2
         with:
           node-version-file: 'package.json'
           cache: 'pnpm'
-      - name: Enable pnpm
-        run: corepack enable pnpm
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Run lint
