--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -17,8 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Enable corepack
-        run: corepack enable
+      - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4.0.2
         with:
           node-version-file: 'package.json'
