feat(githooks): add pre-commit and pre-push hooks
This commit introduces two new git hooks: pre-commit and pre-push.
The pre-commit hook runs secretlint on staged files, while the pre-push
hook runs lint and check scripts. Additionally, a new "prepare" script
has been added to package.json to set the local git hooks path.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint .",
-		"format": "eslint --fix ."
+		"format": "eslint --fix .",
+		"prepare": "git config --local core.hooksPath .githooks || echo 'Can not set git hooks'"
 	},
 	"dependencies": {
 		"@unocss/reset": "^0.60.3"
