--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -24,6 +24,9 @@ jobs:
           cache: pnpm
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+      - name: Run secretlint
+        shell: bash
+        run: pnpm dlx @secretlint/quick-start $(git ls-files)
       - name: Run lint
         run: pnpm lint
       - name: Run check
