--- a/package.json
+++ b/package.json
@@ -18,24 +18,24 @@
 		"prepare": "git config --local core.hooksPath .githooks || echo 'Can not set git hooks'"
 	},
 	"dependencies": {
-		"@unocss/reset": "^0.60.3"
+		"@unocss/reset": "^0.60.4"
 	},
 	"devDependencies": {
 		"@antfu/eslint-config": "^2.21.1",
-		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@unocss/eslint-plugin": "^0.60.3",
-		"eslint": "^9.3.0",
+		"@sveltejs/adapter-static": "^3.0.2",
+		"@sveltejs/kit": "^2.5.17",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@unocss/eslint-plugin": "^0.60.4",
+		"eslint": "^9.5.0",
 		"eslint-plugin-format": "^0.1.2",
-		"eslint-plugin-svelte": "^2.40.0",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^3.6.0",
+		"eslint-plugin-svelte": "^2.41.0",
+		"svelte": "5.0.0-next.166",
+		"svelte-check": "^3.8.4",
 		"svelte-eslint-parser": "^0.36.0",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"typescript-svelte-plugin": "^0.3.38",
-		"unocss": "^0.60.3",
-		"vite": "^5.0.3"
+		"tslib": "^2.6.3",
+		"typescript": "^5.5.2",
+		"typescript-svelte-plugin": "^0.3.39",
+		"unocss": "^0.60.4",
+		"vite": "^5.3.1"
 	}
 }
