feat: add eslint cache and update scripts
This commit adds .eslintcache to .gitignore to prevent it from being
tracked. It also modifies the lint and format scripts in package.json.
The lint script now uses the --cache flag for eslint, and the format
script now runs the lint script with the --fix flag.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "eslint .",
-		"format": "eslint --fix .",
+		"lint": "eslint --cache .",
+		"format": "npm run lint -- --fix",
 		"prepare": "git config --local core.hooksPath .githooks || echo 'Can not set git hooks'"
 	},
 	"dependencies": {
