--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"devDependencies": {
 		"@antfu/eslint-config": "^2.21.1",
 		"@sveltejs/adapter-static": "^3.0.2",
+		"@sveltejs/enhanced-img": "^0.3.0",
 		"@sveltejs/kit": "^2.5.17",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@unocss/eslint-plugin": "^0.60.4",
