--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"eslint": "^9.5.0",
 		"eslint-plugin-format": "^0.1.2",
 		"eslint-plugin-svelte": "^2.41.0",
+		"std-env": "^3.7.0",
 		"svelte": "5.0.0-next.166",
 		"svelte-check": "^3.8.4",
 		"svelte-eslint-parser": "^0.36.0",
