--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
 		"@sveltejs/enhanced-img": "^0.3.0",
 		"@sveltejs/kit": "^2.5.17",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@types/node": "^20.14.9",
 		"@unocss/eslint-plugin": "^0.60.4",
 		"eslint": "^9.5.0",
 		"eslint-plugin-format": "^0.1.2",
 		"eslint-plugin-svelte": "^2.41.0",
+		"favicons": "^7.2.0",
 		"std-env": "^3.7.0",
 		"svelte": "5.0.0-next.166",
 		"svelte-check": "^3.8.4",
