feat(unocss): add UnoCSS Svelte extractor
This commit introduces the '@unocss/extractor-svelte' package to the
project. It is added to the package.json dependencies and the
pnpm-lock.yaml file. The extractor is also integrated into the Vite
configuration, allowing UnoCSS to understand and optimize Svelte
specific CSS.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/node": "^20.14.9",
 		"@unocss/eslint-plugin": "^0.60.4",
+		"@unocss/extractor-svelte": "^0.61.0",
 		"eslint": "^9.5.0",
 		"eslint-plugin-format": "^0.1.2",
 		"eslint-plugin-svelte": "^2.41.0",
