feat: update dependencies and add unocss presets
This commit updates various dependencies in the pnpm-lock.yaml file.
It also adds unocss presets in the uno.config.ts file and updates
the type definitions in the src/app.d.ts file.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@types/node": "^20.14.9",
 		"@unocss/eslint-plugin": "^0.60.4",
 		"@unocss/extractor-svelte": "^0.61.0",
+		"@unocss/preset-attributify": "^0.61.0",
 		"eslint": "^9.5.0",
 		"eslint-plugin-format": "^0.1.2",
 		"eslint-plugin-svelte": "^2.41.0",
