feat(performance): html minifyをしてみる
https://github.com/ntsd/sveltekit-html-minifier
これを元にしてるみたい。実装見たところ問題なさそうhttps://github.com/terser/html-minifier-terser

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 	},
 	"dependencies": {
 		"@unocss/reset": "^0.60.4",
-		"animated-unocss": "^0.0.6"
+		"animated-unocss": "^0.0.6",
+		"sveltekit-html-minifier": "^1.0.3"
 	},
 	"devDependencies": {
 		"@antfu/eslint-config": "^2.21.3",
