feat(Logo): svgoによるsvg最適化を入れてみる（とはいえAuDeeロゴが1kb減っただけ)

--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
 		"eslint-plugin-format": "^0.1.2",
 		"eslint-plugin-svelte": "^2.41.0",
 		"favicons": "^7.2.0",
+		"find-cache-dir": "^5.0.0",
 		"std-env": "^3.7.0",
 		"svelte": "5.0.0-next.175",
 		"svelte-check": "^3.8.4",
 		"svelte-eslint-parser": "^0.36.0",
+		"svgo": "^3.3.2",
 		"tslib": "^2.6.3",
 		"typescript": "^5.5.3",
 		"typescript-svelte-plugin": "^0.3.39",
