--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 .eslintcache
 /static/favicons/*
+/static/_redirects
 /src/assets/favicons.html
