--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@unocss/eslint-plugin": "^0.60.4",
 		"@unocss/extractor-svelte": "^0.61.3",
 		"@unocss/preset-attributify": "^0.61.3",
+		"cloudflare-redirect-parser": "^0.1.0",
 		"eslint": "^9.6.0",
 		"eslint-plugin-format": "^0.1.2",
 		"eslint-plugin-svelte": "^2.41.0",
