--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"svelte": "5.0.0-next.175",
 		"svelte-check": "^3.8.4",
 		"svelte-eslint-parser": "^0.36.0",
+		"svelte-preprocess-budoux": "^0.2.1",
 		"sveltekit-html-minifier": "^1.0.3",
 		"tslib": "^2.6.3",
 		"typescript": "^5.5.3",
