feat(Heading.svelte): 見出しにアンカーをつける

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"devDependencies": {
 		"@antfu/eslint-config": "^2.21.3",
+		"@iconify-json/ph": "^1.1.13",
 		"@ryoppippi/vite-plugin-cloudflare-redirect": "npm:@jsr/ryoppippi__vite-plugin-cloudflare-redirect@^1.0.0",
 		"@sveltejs/adapter-static": "^3.0.2",
 		"@sveltejs/enhanced-img": "^0.3.0",
