--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"devDependencies": {
 		"@antfu/eslint-config": "^2.21.3",
+		"@ryoppippi/vite-plugin-cloudflare-redirect": "npm:@jsr/ryoppippi__vite-plugin-cloudflare-redirect@^1.0.0",
 		"@sveltejs/adapter-static": "^3.0.2",
 		"@sveltejs/enhanced-img": "^0.3.0",
 		"@sveltejs/kit": "^2.5.18",
@@ -30,7 +31,6 @@
 		"@unocss/eslint-plugin": "^0.60.4",
 		"@unocss/extractor-svelte": "^0.61.3",
 		"@unocss/preset-attributify": "^0.61.3",
-		"cloudflare-redirect-parser": "^0.1.0",
 		"eslint": "^9.6.0",
 		"eslint-plugin-format": "^0.1.2",
 		"eslint-plugin-svelte": "^2.41.0",
