--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"eslint-plugin-format": "^0.1.2",
 		"eslint-plugin-svelte": "^2.41.0",
 		"favicons": "^7.2.0",
+		"renovate": "^37.431.5",
 		"std-env": "^3.7.0",
 		"svelte": "5.0.0-next.175",
 		"svelte-check": "^3.8.4",
