--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint --cache .",
+		"lint:renovate": "renovate-config-validator",
 		"format": "npm run lint -- --fix",
 		"prepare": "git config --local core.hooksPath .githooks || echo 'Can not set git hooks'"
 	},
