feat: add sveltekit-tweet package
This commit adds the sveltekit-tweet package to the project. This package
allows for easy embedding of tweets within SvelteKit applications. The
package.json and pnpm-lock.yaml files have been updated to reflect this
new dependency.

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"svelte-eslint-parser": "^0.36.0",
 		"svelte-preprocess-budoux": "^0.2.1",
 		"sveltekit-html-minifier": "^1.0.3",
+		"sveltekit-tweet": "^0.0.18",
 		"tslib": "^2.6.3",
 		"typescript": "^5.5.3",
 		"typescript-svelte-plugin": "^0.3.39",
