patch sveltekit-tweet
https://github.com/fayez-nazzal/sveltekit-tweet/pull/5
https://github.com/fayez-nazzal/sveltekit-tweet/pull/4

--- a/package.json
+++ b/package.json
@@ -50,5 +50,10 @@
 		"typescript-svelte-plugin": "^0.3.39",
 		"unocss": "^0.60.4",
 		"vite": "^5.3.3"
+	},
+	"pnpm": {
+		"patchedDependencies": {
+			"sveltekit-tweet@0.0.18": "patches/sveltekit-tweet@0.0.18.patch"
+		}
 	}
 }
