--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"svelte-eslint-parser": "^0.36.0",
 		"svelte-preprocess-budoux": "^0.4.0",
 		"sveltekit-html-minifier": "^1.0.3",
+		"sveltweet": "^0.1.0",
 		"tslib": "^2.6.3",
 		"typescript": "^5.5.4",
 		"typescript-svelte-plugin": "^0.3.39",
