--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"svelte": "5.0.0-next.223",
 		"svelte-check": "^3.8.4",
 		"svelte-eslint-parser": "^0.41.0",
+		"svelte-meta-tags": "^3.1.4",
 		"svelte-preprocess-budoux": "^1.0.0",
 		"sveltekit-html-minifier": "^1.0.3",
 		"sveltweet": "^0.2.3",
