--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"prepare": "git config --local core.hooksPath .githooks || echo 'Can not set git hooks'"
 	},
 	"dependencies": {
-		"@unocss/reset": "^0.62.0"
+		"@unocss/reset": "^0.62.0",
+		"p-retry": "^6.2.0"
 	},
 	"devDependencies": {
 		"@antfu/eslint-config": "^2.23.2",
