--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"type": "module",
 	"version": "0.0.1",
 	"private": true,
-	"packageManager": "pnpm@9.7.1",
+	"packageManager": "pnpm@9.9.0",
 	"engines": {
 		"node": ">=20.0.0 <21.0.0"
 	},
@@ -19,39 +19,39 @@
 		"prepare": "git config --local core.hooksPath .githooks || echo 'Can not set git hooks'"
 	},
 	"dependencies": {
-		"@unocss/reset": "^0.62.0",
+		"@unocss/reset": "^0.62.3",
 		"p-retry": "^6.2.0"
 	},
 	"devDependencies": {
-		"@antfu/eslint-config": "^2.23.2",
-		"@iconify-json/ph": "^1.1.13",
+		"@antfu/eslint-config": "^2.27.3",
+		"@iconify-json/ph": "^1.1.14",
 		"@ryoppippi/vite-plugin-cloudflare-redirect": "npm:@jsr/ryoppippi__vite-plugin-cloudflare-redirect@^1.0.1",
 		"@std/collections": "npm:@jsr/std__collections@^1.0.5",
-		"@sveltejs/adapter-static": "^3.0.2",
-		"@sveltejs/enhanced-img": "^0.3.0",
-		"@sveltejs/kit": "^2.5.18",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
-		"@types/node": "^20.14.11",
-		"@unocss/eslint-plugin": "^0.62.0",
-		"@unocss/extractor-svelte": "^0.62.0",
-		"@unocss/preset-attributify": "^0.62.0",
-		"eslint": "^9.7.0",
+		"@sveltejs/adapter-static": "^3.0.4",
+		"@sveltejs/enhanced-img": "^0.3.4",
+		"@sveltejs/kit": "^2.5.25",
+		"@sveltejs/vite-plugin-svelte": "4.0.0-next.6",
+		"@types/node": "^20.16.2",
+		"@unocss/eslint-plugin": "^0.62.3",
+		"@unocss/extractor-svelte": "^0.62.3",
+		"@unocss/preset-attributify": "^0.62.3",
+		"eslint": "^9.9.1",
 		"eslint-plugin-format": "^0.1.2",
 		"eslint-plugin-svelte": "^2.43.0",
 		"favicons": "^7.2.0",
-		"renovate": "^38.0.0",
+		"renovate": "^38.57.0",
 		"std-env": "^3.7.0",
 		"svelte": "5.0.0-next.223",
-		"svelte-check": "^3.8.4",
+		"svelte-check": "^3.8.6",
 		"svelte-eslint-parser": "^0.41.0",
-		"svelte-preprocess-budoux": "^1.0.0",
+		"svelte-preprocess-budoux": "^1.0.1",
 		"sveltekit-html-minifier": "^1.0.3",
-		"sveltweet": "^0.2.3",
-		"tslib": "^2.6.3",
+		"sveltweet": "^0.2.5",
+		"tslib": "^2.7.0",
 		"typescript": "^5.5.4",
-		"typescript-svelte-plugin": "^0.3.39",
-		"unocss": "^0.62.0",
-		"vite": "^5.3.4",
+		"typescript-svelte-plugin": "^0.3.40",
+		"unocss": "^0.62.3",
+		"vite": "^5.4.2",
 		"vite-plugin-favicons": "^0.1.4"
 	}
 }
