--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
 		"prepare": "git config --local core.hooksPath .githooks || echo 'Can not set git hooks'"
 	},
 	"dependencies": {
-		"@unocss/reset": "^0.62.3",
-		"p-retry": "^6.2.0"
+		"@unocss/reset": "^0.62.3"
 	},
 	"devDependencies": {
 		"@antfu/eslint-config": "^2.27.3",
@@ -39,6 +38,7 @@
 		"eslint-plugin-format": "^0.1.2",
 		"eslint-plugin-svelte": "^2.43.0",
 		"favicons": "^7.2.0",
+		"p-retry": "^6.2.0",
 		"renovate": "^38.57.0",
 		"std-env": "^3.7.0",
 		"svelte": "5.0.0-next.223",
