--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@antfu/eslint-config": "^3.0.0",
 		"@iconify-json/ph": "^1.2.0",
 		"@ryoppippi/vite-plugin-cloudflare-redirect": "npm:@jsr/ryoppippi__vite-plugin-cloudflare-redirect@^1.0.2",
+		"@std/async": "npm:@jsr/std__async@^1.0.6",
 		"@std/collections": "npm:@jsr/std__collections@^1.0.5",
 		"@sveltejs/adapter-static": "^3.0.4",
 		"@sveltejs/enhanced-img": "^0.3.8",
@@ -36,7 +37,6 @@
 		"eslint-plugin-format": "^0.1.2",
 		"eslint-plugin-svelte": "^2.43.0",
 		"favicons": "^7.2.0",
-		"p-retry": "^6.2.0",
 		"renovate": "^38.68.0",
 		"std-env": "^3.7.0",
 		"svelte": "5.0.0-next.262",
