chore: udpate deps

--- a/package.json
+++ b/package.json
@@ -17,38 +17,38 @@
 		"preinstall": "npx only-allow pnpm"
 	},
 	"dependencies": {
-		"@unocss/reset": "^0.62.3"
+		"@unocss/reset": "^0.62.4"
 	},
 	"devDependencies": {
-		"@antfu/eslint-config": "^3.0.0",
-		"@iconify-json/ph": "^1.2.0",
-		"@ryoppippi/vite-plugin-cloudflare-redirect": "npm:@jsr/ryoppippi__vite-plugin-cloudflare-redirect@^1.0.2",
+		"@antfu/eslint-config": "^3.8.0",
+		"@iconify-json/ph": "^1.2.1",
+		"@ryoppippi/vite-plugin-cloudflare-redirect": "npm:@jsr/ryoppippi__vite-plugin-cloudflare-redirect@^1.0.3",
 		"@std/async": "npm:@jsr/std__async@^1.0.6",
-		"@std/collections": "npm:@jsr/std__collections@^1.0.5",
-		"@sveltejs/adapter-static": "^3.0.4",
-		"@sveltejs/enhanced-img": "^0.3.8",
-		"@sveltejs/kit": "^2.6.2",
+		"@std/collections": "npm:@jsr/std__collections@^1.0.8",
+		"@sveltejs/adapter-static": "^3.0.5",
+		"@sveltejs/enhanced-img": "^0.3.9",
+		"@sveltejs/kit": "^2.7.1",
 		"@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
-		"@types/node": "^20.16.5",
-		"@unocss/eslint-plugin": "^0.62.3",
-		"@unocss/extractor-svelte": "^0.62.3",
-		"@unocss/preset-attributify": "^0.62.3",
-		"eslint": "^9.9.1",
+		"@types/node": "^20.16.13",
+		"@unocss/eslint-plugin": "^0.62.4",
+		"@unocss/extractor-svelte": "^0.62.4",
+		"@unocss/preset-attributify": "^0.62.4",
+		"eslint": "^9.13.0",
 		"eslint-plugin-format": "^0.1.2",
-		"eslint-plugin-svelte": "^2.43.0",
+		"eslint-plugin-svelte": "^2.45.1",
 		"favicons": "^7.2.0",
-		"renovate": "^38.68.0",
+		"renovate": "^38.128.1",
 		"std-env": "^3.7.0",
-		"svelte": "5.0.0-next.262",
-		"svelte-check": "^4.0.0",
-		"svelte-eslint-parser": "^0.41.0",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.5",
+		"svelte-eslint-parser": "^0.41.1",
 		"svelte-preprocess-budoux": "^1.0.2",
-		"sveltweet": "^0.2.6",
-		"tslib": "^2.7.0",
-		"typescript": "^5.5.4",
-		"typescript-svelte-plugin": "^0.3.41",
-		"unocss": "^0.62.3",
-		"vite": "^5.4.3",
+		"sveltweet": "^0.2.11",
+		"tslib": "^2.8.0",
+		"typescript": "^5.6.3",
+		"typescript-svelte-plugin": "^0.3.42",
+		"unocss": "^0.62.4",
+		"vite": "^5.4.9",
 		"vite-plugin-favicons": "^0.1.5"
 	}
 }
