--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -20,12 +20,21 @@ jobs:
       - uses: pnpm/action-setup@v4
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-      - name: Run secretlint
-        shell: bash
-        run: pnpm dlx @secretlint/quick-start $(git ls-files)
       - name: Run check
         run: pnpm check
       - name: Run lint
         run: |
           pnpm lint
           pnpm lint:renovate
+
+  secretlint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set node
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+      - name: Run secretlint
+        shell: bash
+        run: npx @secretlint/quick-start ./**/*
