--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint --cache .",
 		"lint:renovate": "renovate-config-validator",
-		"format": "nr format --fix",
+		"format": "nr lint --fix",
 		"secretlint": "nlx @secretlint/quick-start",
 		"prepare": "husky",
 		"preinstall": "npx only-allow pnpm"
