chore: update pnpm and manage .npmrc -> pnpm-workspace

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"type": "module",
 	"version": "0.0.1",
 	"private": true,
-	"packageManager": "pnpm@9.11.0",
+	"packageManager": "pnpm@10.11.0",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -24,9 +24,9 @@
 		"@antfu/eslint-config": "^3.8.0",
 		"@antfu/ni": "^0.23.0",
 		"@iconify-json/ph": "^1.2.1",
-		"@ryoppippi/vite-plugin-cloudflare-redirect": "npm:@jsr/ryoppippi__vite-plugin-cloudflare-redirect@^1.0.3",
-		"@std/async": "npm:@jsr/std__async@^1.0.6",
-		"@std/collections": "npm:@jsr/std__collections@^1.0.8",
+		"@ryoppippi/vite-plugin-cloudflare-redirect": "jsr:^1.0.3",
+		"@std/async": "jsr:^1.0.6",
+		"@std/collections": "jsr:^1.0.8",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/enhanced-img": "^0.3.9",
 		"@sveltejs/kit": "^2.21.0",
