--- a/package.json
+++ b/package.json
@@ -47,11 +47,10 @@
 		"svelte-eslint-parser": "^1.2.0",
 		"svelte-preprocess-budoux": "^1.1.2",
 		"sveltweet": "^0.4.3",
-		"tslib": "^2.8.1",
 		"typescript": "^5.8.3",
 		"typescript-svelte-plugin": "^0.3.47",
 		"unocss": "^66.1.3",
-		"vite": "^6.3.5",
+		"vite": "npm:rolldown-vite@latest",
 		"vite-plugin-favicons": "^0.1.7"
 	},
 	"lint-staged": {
