--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"typescript": "^5.8.3",
 		"typescript-svelte-plugin": "^0.3.47",
 		"unocss": "^66.1.3",
+		"valibot": "^1.1.0",
 		"vite": "npm:rolldown-vite@latest",
 		"vite-plugin-favicons": "^0.1.7"
 	},
